--- a/UI/ChatUI/ChatUI/ChatUI.Mobile/ChatUI.Mobile.csproj
+++ b/UI/ChatUI/ChatUI/ChatUI.Mobile/ChatUI.Mobile.csproj
@@ -31,11 +31,12 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.9.0-dev.1144" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.1144" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.1939" />
+    <PackageReference Include="Uno.WinUI" Version="5.0.0-dev.1230" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1230" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.1144" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.0-dev.1144" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1230" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net7.0-android'">
