--- a/UI/ChatUI/ChatUI/ChatUI.Skia.Gtk/ChatUI.Skia.Gtk.csproj
+++ b/UI/ChatUI/ChatUI/ChatUI.Skia.Gtk/ChatUI.Skia.Gtk.csproj
@@ -9,11 +9,12 @@
     <Content Include="..\ChatUI.Windows\Images\StoreLogo.png" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.0-dev.1144" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.1144" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.1939" />
+    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="5.0.0-dev.1230" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1230" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.1144" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.0-dev.1144" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1230" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
   </ItemGroup>
