--- a/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
+++ b/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
@@ -8,9 +8,7 @@
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net7.0-windows10.0.18362'">
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.24" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.24" />
+<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'!='net7.0-windows10.0.18362'">
