--- a/UI/UnoMaterialToolkitSample/UnoMaterialToolkitSample/UnoMaterialToolkitSample.csproj
+++ b/UI/UnoMaterialToolkitSample/UnoMaterialToolkitSample/UnoMaterialToolkitSample.csproj
@@ -32,9 +32,8 @@
 		</ItemGroup>
 		<ItemGroup Condition="'$(TargetFramework)'=='net7.0-windows10.0.18362'">
 			<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-			<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
-			<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
-  </ItemGroup>
+			<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+	  </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'!='net7.0-windows10.0.18362'">
     <Content Include="Assets\**" />
     <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
