--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2/WCTTestbed2.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2/WCTTestbed2.csproj
@@ -32,8 +32,7 @@
 	
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.24" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.24" />
+<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 	</ItemGroup>
 	
 	<!-- Include the Community Toolkit -->
