--- a/build-samples.yml
+++ b/build-samples.yml
@@ -24,6 +24,12 @@ steps:
       Write-Host "${{ parameters.path }}"
 
       & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
+      
+      $folderPath = [System.IO.Path]::GetDirectoryName("${{ parameters.path }}");
+
+      if (!((Get-ChildItem -Path $folderPath\**\*.Tests.csproj -Recurse) -eq $null)) {
+        & dotnet test "${{ parameters.path }}" -c Release --collect "XPlat code coverage" --logger trx --no-build ;
+      }
 
       # fail the build on last exit code non zero
       if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
