--- a/UI/UnoSimplePhotos/SimplePhotos.Windows/SimplePhotos.Windows.csproj
+++ b/UI/UnoSimplePhotos/SimplePhotos.Windows/SimplePhotos.Windows.csproj
@@ -24,12 +24,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.4" />
-		<PackageReference Include="Uno.WinUI" Version="4.8.33" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.33" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
 	</ItemGroup>
 
 	<ItemGroup>
