--- a/UI/UnoSimplePhotos/SimplePhotos/SimplePhotos.csproj
+++ b/UI/UnoSimplePhotos/SimplePhotos/SimplePhotos.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.8.33" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.4" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
@@ -16,8 +16,8 @@
 	<Choose>
 		<When Condition="$(IsWinAppSdk)">
 			<ItemGroup>
-				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
-				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 			</ItemGroup>
 
 			<ItemGroup>
