--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Gtk/Authentication.OidcDemo.Skia.Gtk.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Gtk/Authentication.OidcDemo.Skia.Gtk.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup Condition="exists('..\Authentication.OidcDemo.Windows')">
     <EmbeddedResource Include="..\Authentication.OidcDemo.Windows\Package.appxmanifest" LogicalName="Package.appxmanifest" />
@@ -15,14 +15,14 @@
     <UpToDateCheckInput Include="..\Authentication.OidcDemo.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-	<PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" />  
+	<PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />  
   </ItemGroup>
   <Import Project="..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems" Label="Shared" />
 </Project>
