--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
 		
 	</PropertyGroup>
@@ -42,12 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
-    <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" /> 
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" /> 
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.9.26" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.24" />
