--- a/UI/UnoContoso/UnoContoso.Repository/UnoContoso.Repository.csproj
+++ b/UI/UnoContoso/UnoContoso.Repository/UnoContoso.Repository.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />		
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />		
 	</ItemGroup>
 	
 	<ItemGroup>
