--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Mobile/SyncFusionApp.Mobile.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Mobile/SyncFusionApp.Mobile.csproj
@@ -32,9 +32,9 @@
 		<PackageReference Include="Uno.Extensions.Logging.Serilog" />
 		<PackageReference Include="Uno.Extensions.Serialization.Http" />
 		<PackageReference Include="Uno.Extensions.Serialization.Refit" />
-		<PackageReference Include="Uno.Material.WinUI" />
+		<!--<PackageReference Include="Uno.Material.WinUI" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
-		<PackageReference Include="Uno.Toolkit.WinUI" />
+		<PackageReference Include="Uno.Toolkit.WinUI" />-->
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
@@ -42,7 +42,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+		<!--<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />-->
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
@@ -83,7 +83,6 @@
 	</Choose>
 	<ItemGroup>
 		<ProjectReference Include="..\SyncfusionApp\SyncfusionApp.csproj" />
-		<ProjectReference Include="..\SyncfusionApp.DataContracts\SyncfusionApp.DataContracts.csproj" />
 		<ProjectReference Include="..\SyncfusionApp.MauiControls\SyncfusionApp.MauiControls.csproj" />
 	</ItemGroup>
 	<Import Project="..\SyncfusionApp.Base\base.props" />
