--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Windows/SyncFusionApp.Windows.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Windows/SyncFusionApp.Windows.csproj
@@ -33,9 +33,9 @@
 		<PackageReference Include="Uno.Extensions.Logging.Serilog" />
 		<PackageReference Include="Uno.Extensions.Serialization.Http" />
 		<PackageReference Include="Uno.Extensions.Serialization.Refit" />
-		<PackageReference Include="Uno.Material.WinUI" />
+		<!--<PackageReference Include="Uno.Material.WinUI" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
-		<PackageReference Include="Uno.Toolkit.WinUI" />
+		<PackageReference Include="Uno.Toolkit.WinUI" />-->
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
@@ -62,7 +62,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\SyncfusionApp\SyncfusionApp.csproj" />
-		<ProjectReference Include="..\SyncfusionApp.DataContracts\SyncfusionApp.DataContracts.csproj" />
 		<ProjectReference Include="..\SyncfusionApp.MauiControls\SyncfusionApp.MauiControls.csproj" />
 	</ItemGroup>
 
@@ -72,7 +71,7 @@
 		package has not yet been restored.
 	-->
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-		<ProjectCapability Include="Msix"/>
+		<ProjectCapability Include="Msix" />
 	</ItemGroup>
 
 	<!-- 
