--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/SyncFusionApp.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/SyncFusionApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net7.0-windows10.0.19041</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net7.0;net7.0-ios;net7.0-android;net7.0-maccatalyst</TargetFrameworks>
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.Dsp.Tasks" />
+		<!--<PackageReference Include="Uno.Dsp.Tasks" />-->
 		<PackageReference Include="Uno.WinUI" />
 		<PackageReference Include="Uno.Resizetizer" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
@@ -22,9 +22,9 @@
 		<PackageReference Include="Uno.Extensions.Serialization.Http" />
 		<PackageReference Include="Uno.Extensions.Http.WinUI" />
 		<PackageReference Include="Uno.Extensions.Serialization.Refit" />
-		<PackageReference Include="Uno.Material.WinUI" />
+		<!--<PackageReference Include="Uno.Material.WinUI" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
-		<PackageReference Include="Uno.Toolkit.WinUI" />
+		<PackageReference Include="Uno.Toolkit.WinUI" />-->
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
@@ -64,12 +64,10 @@
 	</Choose>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SyncfusionApp.DataContracts\SyncfusionApp.DataContracts.csproj" />
 		<ProjectReference Include="..\SyncfusionApp.MauiControls\SyncfusionApp.MauiControls.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<UnoDspImportColors Include="Styles\*.zip" Generator="Xaml" />
 		<UnoImage Include="Assets\**\*.svg" />
 		<EmbeddedResource Include="appsettings.json" />
 		<EmbeddedResource Include="appsettings.*.json" DependentUpon="appsettings.json" />
