--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.Mobile/GrapeCityApp.Mobile.csproj
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.Mobile/GrapeCityApp.Mobile.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-ios;net8.0-android;net8.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net8.0-ios;net8.0-android</TargetFrameworks>
+		<!-- MacCatalyst disabled due to issue with CI - uncomment to add MacCatalyst tfm-->
+		<!--<TargetFrameworks>$(TargetFrameworks);net8.0-maccatalyst</TargetFrameworks>-->
 		<TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
