chore: remove api key

--- a/reference/TubePlayer/TubePlayer/appsettings.development.json
+++ b/reference/TubePlayer/TubePlayer/appsettings.development.json
@@ -4,7 +4,7 @@
   },
   "YoutubeEndpoint": {
     "Url": "https://youtube.googleapis.com/youtube/v3",
-    "ApiKey": "yCrGWZY35SDZ7M2x7FSUP6QXCrjwLic78ZzyGFb",
+    "ApiKey": "YOUR-API-KEY-HERE",
     "UseNativeHandler": true
   },
   "YoutubePlayerEndpoint": {
