--- a/reference/SimpleCalc/MVVM-CSharp/.editorconfig
+++ b/reference/SimpleCalc/MVVM-CSharp/.editorconfig
@@ -9,7 +9,7 @@ root = true
 ##########################################
 
 [*]
-indent_style = space
+indent_style = tab
 end_of_line = crlf
 trim_trailing_whitespace = true
 insert_final_newline = true
