--- a/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT.Windows/UnoChatGPT.Windows.csproj
+++ b/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT.Windows/UnoChatGPT.Windows.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
-		<TargetPlatformMinVersion>10.0.22000.0</TargetPlatformMinVersion>
+		<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
 		<RootNamespace>UnoWinUIQuickStart</RootNamespace>
 		<Platforms>x86;x64;arm64</Platforms>
 		<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
@@ -10,13 +9,13 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
+		<UseRidGraph>true</UseRidGraph>
 	</PropertyGroup>
 	<PropertyGroup>
 		<!-- Bundles the WinAppSDK binaries (Uncomment for unpackaged builds) -->
 		<!-- <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained> -->
 		<!-- This bundles the .NET Core libraries (Uncomment for packaged builds)  -->
 		<SelfContained>true</SelfContained>
-		<SupportedOSPlatformVersion>10.0.22000.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -50,7 +49,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\UnoChatGPT\UnoChatGPT.csproj" />
-		<ProjectReference Include="..\UnoChatGPT.DataContracts\UnoChatGPT.DataContracts.csproj" />
 	</ItemGroup>
 
 	<Import Project="..\UnoChatGPT.Base\base.props" />
