--- a/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/UnoChatGPT.csproj
+++ b/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/UnoChatGPT.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net8.0-windows10.0.22000</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net8.0;net8.0-ios;net8.0-android;net8.0-maccatalyst</TargetFrameworks>
 
 		<!-- Ensures the .xr.xml files are generated in a proper layout folder -->
@@ -33,7 +33,11 @@
 				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
 				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
 			</ItemGroup>
+			<PropertyGroup>
+				<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
 
+				<UseRidGraph>true</UseRidGraph>
+			</PropertyGroup>
 		</When>
 		<Otherwise>
 			<ItemGroup>
@@ -46,10 +50,6 @@
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
-
-	<ItemGroup>
-		<ProjectReference Include="..\UnoChatGPT.DataContracts\UnoChatGPT.DataContracts.csproj" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<UnoImage Include="Assets\**\*.svg" />
